Fix some scaling and visibility issues

--- a/client/styles/style.styl
+++ b/client/styles/style.styl
@@ -139,7 +139,7 @@ svg
 .side-panel
   position fixed
   bottom 0
-  height calc(100vh - 70px)
+  height calc(100vh - 200px)
   -webkit-transition: width .05s linear
   transition: width .05s linear
   -webkit-transform: translateZ(0) scale(1,1)
